<?xml version="1.0" encoding="utf-8"?>
    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@color/darker_grey"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">
        <ImageView
            android:id="@+id/img_user"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_user_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/userName"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_user"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/img_location"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:tint="@color/green" />
        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/address"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_location"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Time_show"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name" />

        <LinearLayout
            android:id="@+id/lin_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/shape_rounded_rect"
            app:layout_constraintEnd_toStartOf="@id/lin_distance"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/img_user"
            app:layout_constraintTop_toBottomOf="@id/img_user">

        <ImageView
            android:id="@+id/img_battery"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_battery"
            app:tint="@color/green" />
        <TextView
            android:id="@+id/battery_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/battery_percentage"
            android:textColor="@color/green"
            android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/lin_wifi"
            app:layout_constraintStart_toEndOf="@id/lin_battery"
            app:layout_constraintTop_toBottomOf="@id/img_user">
        <ImageView
            android:id="@+id/img_distance"
            android:layout_width="16dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_distance"
            app:layout_constraintStart_toEndOf="@id/battery_percent"
            app:layout_constraintTop_toBottomOf="@id/img_user"
            app:tint="#b197dc" />
        <TextView
            android:id="@+id/distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/distance"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_battery"
            app:layout_constraintStart_toEndOf="@id/img_distance"
            app:layout_constraintTop_toTopOf="@id/img_battery" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/img_call"
            app:layout_constraintStart_toEndOf="@id/lin_distance"
            app:layout_constraintTop_toBottomOf="@id/img_user">
        <ImageView
            android:id="@+id/img_wifi"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_wifi"
            app:layout_constraintStart_toEndOf="@id/distance_value"
            app:layout_constraintTop_toBottomOf="@id/img_user"
            app:tint="@color/green" />
            <TextView
                android:id="@+id/wifi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/wifi"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_wifi"
                app:layout_constraintTop_toTopOf="@id/img_battery" />
        </LinearLayout>
        <ImageView
            android:id="@+id/img_call"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_circle"
            android:padding="8dp"
            android:src="@drawable/ic_call"
            app:layout_constraintBottom_toBottomOf="@id/lin_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lin_battery"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>